[gd_scene load_steps=33 format=3 uid="uid://bsare4ir5ea0"]

[ext_resource type="Script" uid="uid://v8hwjd67wswh" path="res://scripts/settings/settings.gd" id="1_8my36"]
[ext_resource type="Theme" uid="uid://b7eumke0q4lm" path="res://theme/bg_them.tres" id="1_58qqr"]
[ext_resource type="Texture2D" uid="uid://51si0qrucy28" path="res://assets/images/menu-bg.png" id="2_ebdyw"]
[ext_resource type="Texture2D" uid="uid://riocde56lyrh" path="res://assets/images/paper-container.png" id="3_8my36"]
[ext_resource type="Theme" uid="uid://cb3r3oyw7hxa0" path="res://theme/label_theme.tres" id="4_u8w1m"]
[ext_resource type="FontFile" uid="uid://b44m80u2kmjq8" path="res://assets/fonts/EFCO Brookshire Regular.ttf" id="5_snst7"]
[ext_resource type="Theme" uid="uid://ctg5ru4kl6ydx" path="res://theme/button_theme.tres" id="6_58npj"]
[ext_resource type="Texture2D" uid="uid://cboevju324t5e" path="res://assets/images/buttons.png" id="7_net7w"]
[ext_resource type="Texture2D" uid="uid://b6ywd6ncuwjv" path="res://assets/images/popup-container.png" id="8_ebdyw"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6lpsh"]
texture = ExtResource("3_8my36")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ohje1"]
bg_color = Color(0.121569, 0.0392157, 0.00784314, 0)
border_width_bottom = 2
border_color = Color(0.363859, 0.16728, 0.0581041, 1)

[sub_resource type="Animation" id="Animation_xrfcs"]
resource_name = "RESET"

[sub_resource type="Animation" id="Animation_m0y2x"]
resource_name = "dissolve"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7053g"]
_data = {
&"RESET": SubResource("Animation_xrfcs"),
&"dissolve": SubResource("Animation_m0y2x")
}

[sub_resource type="Animation" id="Animation_3fokn"]
resource_name = "RESET"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y2b1x"]
_data = {
&"RESET": SubResource("Animation_3fokn")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_m5nrw"]
atlas = ExtResource("7_net7w")
region = Rect2(1329, 71, 180, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_30ene"]
atlas = ExtResource("7_net7w")
region = Rect2(1329, 71, 180, 177)
margin = Rect2(0, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjjo8"]
atlas = ExtResource("7_net7w")
region = Rect2(1329, 71, 180, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohje1"]
atlas = ExtResource("7_net7w")
region = Rect2(928, 71, 180, 176)

[sub_resource type="AtlasTexture" id="AtlasTexture_4453l"]
atlas = ExtResource("7_net7w")
region = Rect2(928, 71, 180, 176)
margin = Rect2(10, 10, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_yk0vj"]
atlas = ExtResource("7_net7w")
region = Rect2(928, 71, 180, 176)

[sub_resource type="AtlasTexture" id="AtlasTexture_8my36"]
atlas = ExtResource("8_ebdyw")
region = Rect2(552, 164, 866, 840)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8w1m"]
atlas = ExtResource("7_net7w")
region = Rect2(729, 461, 180, 176)
margin = Rect2(20, 20, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_snst7"]
atlas = ExtResource("7_net7w")
region = Rect2(729, 461, 180, 176)
margin = Rect2(25, 25, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebdyw"]
atlas = ExtResource("7_net7w")
region = Rect2(729, 461, 180, 176)

[sub_resource type="AtlasTexture" id="AtlasTexture_58npj"]
atlas = ExtResource("7_net7w")
region = Rect2(528, 461, 180, 176)
margin = Rect2(20, 20, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_net7w"]
atlas = ExtResource("7_net7w")
region = Rect2(528, 461, 180, 176)
margin = Rect2(50, 50, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lpsh"]
atlas = ExtResource("7_net7w")
region = Rect2(528, 461, 180, 176)

[sub_resource type="Animation" id="Animation_u8w1m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LogoutPopup/TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(301, 500)]
}

[sub_resource type="Animation" id="Animation_8my36"]
resource_name = "pop_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LogoutPopup/TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(301, 500), Vector2(301, 107)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_snst7"]
_data = {
&"RESET": SubResource("Animation_u8w1m"),
&"pop_up": SubResource("Animation_8my36")
}

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8my36")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_58qqr")
texture = ExtResource("2_ebdyw")
expand_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(550, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -200.0
offset_right = 275.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6lpsh")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Tabs" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Spacer" type="Control" parent="PanelContainer/HBoxContainer/Tabs"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="NovelTitleLabel" type="Label" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("4_u8w1m")
theme_override_colors/font_color = Color(0.407843, 0.258824, 0.0627451, 1)
theme_override_fonts/font = ExtResource("5_snst7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectedChapter" type="Label" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer2"]
visible = false
layout_mode = 2
theme = ExtResource("4_u8w1m")
theme_override_colors/font_color = Color(0.407843, 0.258824, 0.0627451, 1)
theme_override_fonts/font = ExtResource("5_snst7")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_ohje1")
text = "Kabanata 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("6_58npj")
theme_type_variation = &"chapter"

[node name="ChaptersContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer2/ScrollContainer/ChaptersContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer2/ScrollContainer/ChaptersContainer"]
libraries = {
&"": SubResource("AnimationLibrary_7053g")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer2/ScrollContainer"]
libraries = {
&"": SubResource("AnimationLibrary_y2b1x")
}

[node name="LogoutModalTrigger" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 38.0
offset_right = -51.0
offset_bottom = 106.0
grow_horizontal = 0
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_m5nrw")
texture_pressed = SubResource("AtlasTexture_30ene")
texture_hover = SubResource("AtlasTexture_mjjo8")
ignore_texture_size = true
stretch_mode = 0

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 1
offset_left = 45.0
offset_top = 38.0
offset_right = 114.0
offset_bottom = 106.0
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_ohje1")
texture_pressed = SubResource("AtlasTexture_4453l")
texture_hover = SubResource("AtlasTexture_yk0vj")
ignore_texture_size = true
stretch_mode = 0

[node name="LogoutPopup" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0705882, 0.0705882, 0.0705882, 0.482353)

[node name="TextureRect" type="TextureRect" parent="LogoutPopup"]
custom_minimum_size = Vector2(550, 450)
layout_mode = 2
offset_left = 301.0
offset_top = 500.0
offset_right = 851.0
offset_bottom = 950.0
texture = SubResource("AtlasTexture_8my36")
expand_mode = 1

[node name="ErrorLabel" type="Label" parent="LogoutPopup/TextureRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 44.0
offset_top = 36.0
offset_right = -46.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="LogoutPopup/TextureRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 129.0
offset_bottom = 214.0
grow_horizontal = 2
theme = ExtResource("4_u8w1m")
theme_type_variation = &"black"
text = "Are you sure you
 want to logout?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Yes" type="TextureButton" parent="LogoutPopup/TextureRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -111.0
offset_top = -103.0
offset_right = 9.0
offset_bottom = 17.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_u8w1m")
texture_pressed = SubResource("AtlasTexture_snst7")
texture_hover = SubResource("AtlasTexture_ebdyw")
ignore_texture_size = true
stretch_mode = 0

[node name="HTTPRequest" type="HTTPRequest" parent="LogoutPopup/TextureRect/Yes"]

[node name="No" type="TextureButton" parent="LogoutPopup/TextureRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -99.0
offset_right = 120.0
offset_bottom = 21.0
grow_vertical = 0
texture_normal = SubResource("AtlasTexture_58npj")
texture_pressed = SubResource("AtlasTexture_net7w")
texture_hover = SubResource("AtlasTexture_6lpsh")
ignore_texture_size = true
stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_snst7")
}

[connection signal="button_down" from="LogoutModalTrigger" to="." method="_on_logout_modal_trigger_button_down"]
[connection signal="button_down" from="BackButton" to="." method="_on_back_button_button_down"]
[connection signal="button_down" from="LogoutPopup/TextureRect/Yes" to="." method="_on_yes_button_down"]
[connection signal="request_completed" from="LogoutPopup/TextureRect/Yes/HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="button_down" from="LogoutPopup/TextureRect/No" to="." method="_on_no_button_down"]
